# TNC

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  cvrp_1.qasm  requirements.txt  rust-toolchain.toml  test.qasm
.github/: DOCS.md  dependabot.yml
.github/workflows/: book.yml  check.yml  doc.yml  paper.yml  test.yml
benches/: benchmarks.rs
benchmark/: Cargo.toml
benchmark/.cargo/: config.toml
benchmark/src/: cli.rs  main.rs  protocol.rs  utils.rs
book/: .gitignore  README.md  book.toml  link_docs.sh
book/src/: SUMMARY.md  constructing_tns.md  future_work.md  getting_started.md  intro.md  links.md  parallelization.md  partitioning.md  pathfinding_and_contraction.md  running_on_hpc.md  tensor_structure.md  theory.md
circuits/: ae_indep_qiskit_10.qasm  ae_indep_qiskit_30.qasm  ae_indep_qiskit_50.qasm  dj_indep_qiskit_10.qasm  dj_indep_qiskit_30.qasm  dj_indep_qiskit_50.qasm  ghz_indep_qiskit_10.qasm  ghz_indep_qiskit_30.qasm  ghz_indep_qiskit_50.qasm  graphstate_indep_qiskit_10.qasm  graphstate_indep_qiskit_30.qasm  graphstate_indep_qiskit_50.qasm  groundstate_large_indep_qiskit_14.qasm  groundstate_medium_indep_qiskit_12.qasm  groundstate_small_indep_qiskit_4.qasm  grover-noancilla_indep_qiskit_10.qasm  grover-noancilla_indep_qiskit_11.qasm  grover-v-chain_indep_qiskit_11.qasm  grover-v-chain_indep_qiskit_13.qasm  grover-v-chain_indep_qiskit_17.qasm  portfolioqaoa_indep_qiskit_10.qasm  portfolioqaoa_indep_qiskit_13.qasm  portfolioqaoa_indep_qiskit_17.qasm  portfoliovqe_indep_qiskit_10.qasm  portfoliovqe_indep_qiskit_14.qasm  portfoliovqe_indep_qiskit_18.qasm  pricingcall_indep_qiskit_15.qasm  pricingcall_indep_qiskit_25.qasm  pricingcall_indep_qiskit_5.qasm  pricingput_indep_qiskit_15.qasm  pricingput_indep_qiskit_25.qasm  pricingput_indep_qiskit_5.qasm  qaoa_indep_qiskit_10.qasm  qaoa_indep_qiskit_13.qasm  qaoa_indep_qiskit_16.qasm  qft_indep_qiskit_10.qasm  qft_indep_qiskit_30.qasm  qft_indep_qiskit_50.qasm  qftentangled_indep_qiskit_10.qasm  qftentangled_indep_qiskit_30.qasm  (+39 more)
examples/: balance_path.rs  balanced_usage.rs  basic_usage.rs  cotengra_comparison.rs  dendogram.rs  genetic.rs  parse_logs.rs  partition_case.rs  partition_sweep.rs  simulated_annealing.rs  supermuc_sweep.rs  sweep_communication.rs  sweep_dense_sycamore.rs  sweep_sparse.rs  sweep_sparse_sycamore.rs
examples/supermuc_sweep/: cli.rs  main.rs  protocol.rs  results.rs  utils.rs
paper/: build.sh  paper.bib  paper.md
src/: builders.rs  circuits.rs  contractionpath.rs  gates.rs  hashtensornetwork.rs  hashtensornetwork_tests.rs  io.rs  lib.rs  main.rs  mpi.rs  networks.rs  qasm.rs  random.rs  tensornetwork.rs  tensornetwork_tests.rs  types.rs  utils.rs
src/builders/: circuit_builder.rs  connectivity.rs  random_circuit.rs  sycamore_circuit.rs  tensorgeneration.rs
src/circuits/: connectivity.rs  sycamore.rs
src/contractionpath/: candidates.rs  communication_schemes.rs  contraction_cost.rs  contraction_tree.rs  paths.rs  random_paths.rs  repartitioning.rs
src/hashtensornetwork/: hashtensor.rs
src/mpi/: communication.rs  mpi_types.rs  scatter.rs  serialization.rs  testing.rs
src/networks/: circuit_builder.rs  connectivity.rs  peps.rs  random_circuit.rs  sycamore.rs  sycamore_circuit.rs
src/qasm/: Qasm2Lexer.g4  ast.rs  expression_folder.rs  expression_simplification.rs  gate_inliner.rs  include_resolver.rs  parser.rs  parsing.rs  qasm2lexer.rs  qasm2parser.rs  qasm2parserlistener.rs  qasm2parservisitor.rs  qasm_to_tensornetwork.rs  tensornetwork_creator.rs  tn_creator.rs  utils.rs
src/random/: tensorgeneration.rs
src/tensornetwork/: contraction.rs  contraction_test_data.json  contractionpath.rs  feynman.rs  partitioning.rs  tacotensor.rs  tensor.rs  tensordata.rs  tensorio.rs
src/utils/: datastructures.rs  traits.rs
test/: cvrp_2.qasm  integration_tests.rs  km1_kKaHyPar_sea20.ini  km1_rKaHyPar_sea20.ini  tensor_test.hdf5
tests/: data_test.hdf5  integration_tests.rs
tnc/: Cargo.toml
tnc/examples/: README.md  basic_usage.rs  dendogram.rs  distributed_contraction.rs  local_contraction.rs  parse_logs.rs  repartitioning.rs
tnc/examples/supermuc_sweep/: results.rs
tnc/src/: README.md  _tutorial.rs  contractionpath.rs  doctests.rs  gates.rs  hdf5.rs  io.rs  lib.rs  mpi.rs  qasm.rs  tensornetwork.rs  utils.rs
tnc/src/_tutorial/: constructing_tns.rs  hpc_overview.rs  parallelization.rs  partitioning.rs  pathfinding_and_contraction.rs  running_on_hpc.rs  tensors_structure.rs
tnc/src/builders/: circuit_builder.rs  peps.rs  random_circuit.rs  sycamore_circuit.rs  tensorgeneration.rs
tnc/src/contractionpath/: candidates.rs  communication_schemes.rs  contraction_cost.rs  contraction_tree.rs  paths.rs  repartitioning.rs
tnc/src/contractionpath/contraction_tree/: balancing.rs  export.rs  import.rs  node.rs  utils.rs
tnc/src/contractionpath/contraction_tree/balancing/: balancing_schemes.rs
tnc/src/contractionpath/paths/: branchbound.rs  cotengrust.rs  hyperoptimization.rs  tree_annealing.rs  tree_reconfiguration.rs  tree_tempering.rs  weighted_branchbound.rs
tnc/src/contractionpath/repartitioning/: genetic.rs  simulated_annealing.rs
tnc/src/io/: hdf5.rs  qasm.rs
tnc/src/io/qasm/: ast.rs  circuit_creator.rs  expression_folder.rs  expression_simplification.rs  gate_inliner.rs  include_resolver.rs  parser.rs  qasm_importer.rs
tnc/src/mpi/: communication.rs  mpi_types.rs  serialization.rs
tnc/src/qasm/: Qasm2Lexer.g4  Qasm2Parser.g4  ast.rs  circuit_creator.rs  expression_folder.rs  gate_inliner.rs  generated.rs  parser.rs  qasm_importer.rs  qasm_to_tensornetwork.rs  tn_creator.rs
tnc/src/qasm/.antlr/: Qasm2Lexer.interp  Qasm2Lexer.java  Qasm2Parser.interp  Qasm2Parser.java  Qasm2Parser.tokens  Qasm2ParserBaseListener.java  Qasm2ParserListener.java
tnc/src/tensornetwork/: contraction.rs  contraction_test_data.json  partitioning.rs  tensor.rs  tensordata.rs
tnc/src/tensornetwork/partitioning/: partition_config.rs
tnc/src/utils/: traits.rs
tnc/tests/: integration_tests.rs
(+24 files in other folders)
