[package]
name = "tensorcontraction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { version = "0.8.0", features = ["complex", "derive"] }
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git", features = [
    "complex",
] }
itertools = "0.13.0"
num-complex = "0.4.6"
rand = "0.8.5"
antlr-rust = "0.3.0-beta"
float-cmp = "0.10.0"
tetra = { git = "ssh://gitlab.lrz.de/quantum-research/tetra", branch = "main", features = [
    "serde",
] }
kahypar-sys = { git = "ssh://gitlab.lrz.de/quantum-research/kahypar-sys", branch = "main" }
permutation = "0.4.1"
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.3"
lazy_static = "1.5.0"
log = { version = "0.4.22", features = ["kv_std", "kv_serde"] }
rustc-hash = "2.0.0"
chrono = "0.4.38"
serde_json = "1.0.133"
regex = "1.11.1"
ndarray = "0.15.6"
genetic_algorithm = "0.17.1"
cast = "0.3.0"
rayon = "1.10.0"
ordered-float = "4.5.0"

[dev-dependencies]
criterion = "0.5.1"
static_init = "1.0.3"
mpi_test = { git = "ssh://gitlab.lrz.de/quantum-research/mpi_test", branch = "main" }
flexi_logger = { version = "0.29.6", features = ["kv", "json", "async"] }

[[bench]]
name = "benchmarks"
harness = false
