[package]
name = "tensorcontraction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { version = "0.8.0", features = ["complex", "derive"] }
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git", features = [
    "complex",
] }
itertools = "0.13.0"
num-complex = "0.4.6"
rand = "0.8.5"
antlr-rust = "0.3.0-beta"
float-cmp = "0.10.0"
tetra = { git = "https://github.com/Ectras/tetra.git", features = ["serde"] }
kahypar-sys = { git = "ssh://gitlab.lrz.de/quantum-research/kahypar-sys", branch = "main" }
permutation = "0.4.1"
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.3"
lazy_static = "1.5.0"
log = { version = "0.4.22", features = ["kv_std", "kv_serde"] }
rustc-hash = "2.1.1"
chrono = "0.4.38"
serde_json = "1.0.133"
regex = "1.11.1"
ndarray = "0.15.6"
genetic_algorithm = { git = "https://github.com/Ectras/genetic-algorithm.git", branch = "f64_score" }
rayon = "1.10.0"
ordered-float = "4.5.0"
rustengra = { git = "ssh://gitlab.lrz.de/quantum-research/tensornetworksimulation/rustengra" }
cotengrust = { git = "https://github.com/Ectras/cotengrust.git", branch = "rust_extension" }
serde-pickle = "1.2.0"
jemallocator = "0.5.4"

[dev-dependencies]
criterion = "0.5.1"
static_init = "1.0.3"
mpi-test = { git = "https://github.com/Ectras/mpi-test.git" }
flexi_logger = { version = "0.29.6", features = ["kv", "json", "async"] }
clap = { version = "4.5.28", features = ["derive"] }
flate2 = "1.1.1"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
codegen-units = 1
lto = true
